Update Before and after swipe V1.0.html

--- a/Before and after swipe V1.0.html
+++ b/Before and after swipe V1.0.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div id="container">
-        <img src="landing_page_image.jpg" class="image" alt="Landing Page Image">
+        <img src="85x slowmo.jpg" class="image" alt="Landing Page Image">
     </div>
 
     <div id="switch-container">
@@ -87,9 +87,9 @@
 
         // Array of image file names
         var images = [
-            "landing_page_image.jpg",
-            "left_houlton_school_before.jpg",
-            "right_houlton_school_after.jpg"
+            "85x slowmo.jpg",
+            "Left Houlton School before.jpg",
+            "Right Houlton School after.jpg"
         ];
 
         // Index to keep track of the current image
