--- a/index.html
+++ b/index.html
@@ -3,71 +3,9 @@
 <head>
     <title>Houlton School Then and Now</title>
     <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: Arial, sans-serif;
-        }
+        /* Your existing styles here */
 
-        #container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            overflow: hidden;
-            background-color: #2ecc71; /* Green shade (change the color code to your preferred green) */
-        }
-
-        .image {
-            max-width: 100%;
-            max-height: 100%;
-            display: block;
-        }
-
-        #switch-container {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background for the toggle switch */
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-            display: none; /* Hide the toggle switch by default */
-        }
-
-        #toggle {
-            appearance: none;
-            width: 50px;
-            height: 20px;
-            border-radius: 10px;
-            background-color: #ccc;
-            outline: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        #toggle:checked {
-            background-color: #2196F3; /* Blue color when the toggle is checked */
-        }
-
-        #toggle:before {
-            content: "";
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background-color: #fff;
-            top: 0;
-            left: 0;
-            transform: translateX(5px);
-            transition: transform 0.3s ease;
-        }
-
-        #toggle:checked:before {
-            transform: translateX(25px); /* Move the toggle button to the right when checked */
-        }
+        /* ... */
     </style>
 </head>
 <body>
@@ -111,27 +49,9 @@
         });
 
         // Event listeners for swiping images on mobile
-        var touchStartX = 0;
-        var touchEndX = 0;
+        /* Your existing touch events here */
 
-        image.addEventListener('touchstart', function(e) {
-            touchStartX = e.touches[0].clientX;
-        });
-
-        image.addEventListener('touchend', function(e) {
-            touchEndX = e.changedTouches[0].clientX;
-            var swipeDistance = touchEndX - touchStartX;
-
-            if (swipeDistance > 50) {
-                // Swipe right
-                currentIndex = (currentIndex === 0) ? images.length - 1 : currentIndex - 1;
-            } else if (swipeDistance < -50) {
-                // Swipe left
-                currentIndex = (currentIndex + 1) % images.length;
-            }
-
-            updateImage();
-        });
+        /* ... */
 
         // Check if the device is a mobile or desktop device
         var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
