--- a/index.html
+++ b/index.html
@@ -75,60 +75,17 @@
     </div>
 
     <script>
-        var image = document.querySelector('.image');
-        var switchContainer = document.getElementById('switch-container');
-        var toggle = document.getElementById('toggle');
-
-        // Array of image file names
-        var images = [
-            "85x slowmo.jpg",
-            "Left Houlton School before.jpg",
-            "Right Houlton School after.jpg"
-        ];
-
-        // Index to keep track of the current image
-        var currentIndex = 0;
-
-        // Function to update the image source
-        function updateImage() {
-            image.src = images[currentIndex];
-        }
-
-        // Function to toggle images on desktop
-        function toggleImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            updateImage();
-        }
-
-        // Event listeners for swiping images on mobile and desktop
-        var touchStartX = 0;
-        var touchEndX = 0;
-
-        image.addEventListener('touchstart', function(e) {
-            touchStartX = e.touches[0].clientX;
-        });
-
-        image.addEventListener('touchend', function(e) {
-            touchEndX = e.changedTouches[0].clientX;
-            var swipeDistance = touchEndX - touchStartX;
-
-            if (swipeDistance > 50) {
-                // Swipe right
-                currentIndex = (currentIndex === 0) ? images.length - 1 : currentIndex - 1;
-            } else if (swipeDistance < -50) {
-                // Swipe left
-                currentIndex = (currentIndex + 1) % images.length;
-            }
-
-            updateImage();
-        });
+        // Your existing JavaScript code here
+        // ...
 
         // Check if the device is a mobile or desktop device
         var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
 
         // Show the toggle switch on desktop, hide it on mobile
-        if (!isMobile) {
-            switchContainer.style.display = 'block';
+        if (isMobile) {
+            switchButton.style.display = 'none';
+        } else {
+            switchButton.style.display = 'block';
         }
     </script>
 </body>
