--- a/index.html
+++ b/index.html
@@ -1,92 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Houlton School Then and Now</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: Arial, sans-serif;
-        }
+<script>
+    var image = document.querySelector('.image');
 
-        #container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            overflow: hidden;
-            background-color: #2ecc71; /* Green shade (change the color code to your preferred green) */
-        }
+    // Array of image file names
+    var images = [
+        "85x slowmo.jpg",
+        "Left Houlton School before.jpg",
+        "Right Houlton School after.jpg"
+    ];
 
-        .image {
-            max-width: 100%;
-            max-height: 100%;
-            display: block;
-        }
+    // Index to keep track of the current image
+    var currentIndex = 0;
 
-        #switch-container {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background for the toggle switch */
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-            display: none; /* Hide the toggle switch by default */
-        }
+    // Function to update the image source
+    function updateImage() {
+        image.src = images[currentIndex];
+    }
 
-        #switch-button {
-            appearance: none;
-            border: none;
-            background-color: #ccc;
-            padding: 10px 20px;
-            border-radius: 10px;
-            outline: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+    // Event listener for toggling images with the switch on desktop
+    function toggleImage() {
+        currentIndex = (currentIndex + 1) % images.length;
+        updateImage();
+    }
 
-        #switch-button:hover {
-            background-color: #ddd; /* Light gray color on hover */
-        }
+    // Event listener for moving to the next image on desktop
+    function nextImage() {
+        currentIndex = (currentIndex + 1) % images.length;
+        updateImage();
+    }
 
-        #switch-button:focus {
-            background-color: #2196F3; /* Blue color on focus */
-            color: #fff;
-        }
-
-        @media only screen and (max-width: 600px) {
-            /* Mobile styles */
-            #switch-container {
-                display: block;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div id="container">
-        <img src="85x slowmo.jpg" class="image" alt="Landing Page Image">
-    </div>
-
-    <div id="switch-container">
-        <button id="switch-button" onclick="toggleImage()">Switch Image</button>
-    </div>
-
-    <script>
-        // Your existing JavaScript code here
-        // ...
-
-        // Check if the device is a mobile or desktop device
-        var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
-
-        // Show the toggle switch on desktop, hide it on mobile
-        if (isMobile) {
-            switchButton.style.display = 'none';
-        } else {
-            switchButton.style.display = 'block';
-        }
-    </script>
-</body>
-</html>
+    // Event listeners for swiping images on mobile
+    // ... (The rest of the mobile swipe code remains unchanged)
+</script>
